# tauri-json-tool

./: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: TODO.md  requirements.md  roadmap-plugin.md  task-1-completion-report.md  task-1-system-design.md  task-2-completion-report.md  task-2-system-design.md  task-breakdown.md  task10-completion-report.md  task11-completion-report.md  task11-design.md  task12-completion-report.md  task12-design.md  task13-completion-report.md  task13-design.md  task14-completion-report.md  task14-design.md  task15-completion-report.md  task15-design.md  task16-completion-report.md  task16-design.md  task17-completion-report.md  task17-design.md  task5-design.md  task6-completion-report.md  task6-design.md  task7-completion-report.md  task7-design.md  task8-completion-report.md  task8-design.md  task9-completion-report.md  task9-design.md
scripts/: build-signed.sh  generate-test-data.js  notarize.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/models/: formatting.rs  log_entry.rs  mod.rs  validation.rs
src-tauri/src/services/: file_io.rs  json_formatter.rs  json_parser.rs  logger.rs  mod.rs
src/components/: CodeSnippet.tsx  EmptyState.tsx  ErrorMessage.tsx  IssueReporter.tsx  JsonPanel.tsx  LoadingOverlay.tsx  LogViewer.tsx  MetricsDisplay.tsx  ShortcutsHelp.tsx  ThemeToggle.tsx  (+1 more)
test-data/: test-1mb.json
(+21 files in other folders)
