[package]
name = "json-formatter-validator"
version = "0.1.0"
description = "Desktop utility for JSON validation and formatting"
authors = ["JSON Tools Team"]
license = "MIT"
repository = "https://github.com/yourusername/tauri-json-tool"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
